[tool.poetry]
name = "genfond"
version = "0.1.0"
description = ""
authors = ["Till Hofmann <till.hofmann@ml.rwth-aachen.de>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pddl = { git = "https://github.com/morxa/pddl", rev = '39d4898ddb67ca2c775a3d9715fab68ced89cfcd' }
dlplan = { git = "https://github.com/morxa/dlplan", rev = '961400e4cd493e0dfeb023b419d2b41f0c0600b5' }
wlplan = { path = "./wlplan" }
clingo = "*"
pygraphviz = "*"
tqdm = "*"
setuptools = "*"
filelock = "*"
frozendict = "*"
pyyaml = "*"
mergedeep = "^1.3.4"
numpy = "^2.2.3"
pyvis = "^0.3.2"


[tool.poetry.group.dev.dependencies]
flake8 = "*"
pytest = "*"
ipython = "^9.0.1"
mypy = "^1.15.0"
types-tqdm = "^4.67.0.20250301"
types-pyyaml = "^6.0.12.20241230"
isort = "^6.0.1"
black = "^25.1.0"

[tool.mypy]

[[tool.mypy.overrides]]
module = ["pddl.*", "dlplan.*", "mergedeep.*"]
ignore_missing_imports = true

[tool.isort]
line_length = 119
profile = "black"

[tool.black]
line-length = 119

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
