[tool.poetry]
name = "genfond"
version = "0.1.0"
description = ""
authors = ["Till Hofmann <till.hofmann@ml.rwth-aachen.de>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pddl = { git = "https://github.com/AI-planning/pddl", rev = 'main' }
dlplan = { git = "https://github.com/morxa/dlplan", rev = 'cfd45615a8f87a4d92b4ba4a61a8dc9d873cf1c9' }
clingo = "*"
pygraphviz = { git = "https://github.com/pygraphviz/pygraphviz", rev = "2fa8af802aeecfe92e53425c2503587de9593d9e"}
tqdm = "*"
setuptools = "*"
filelock = "*"
frozendict = "*"
pyyaml = "*"
mergedeep = "^1.3.4"


[tool.poetry.group.dev.dependencies]
flake8 = "*"
pytest = "*"
ipython = "^9.0.1"
mypy = "^1.15.0"
types-tqdm = "^4.67.0.20250301"
types-pyyaml = "^6.0.12.20241230"
isort = "^6.0.1"
black = "^25.1.0"

[tool.mypy]

[[tool.mypy.overrides]]
module = ["pddl.*", "dlplan.*", "mergedeep.*"]
ignore_missing_imports = true

[tool.isort]
line_length = 119
profile = "black"

[tool.black]
line-length = 119

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
